Quick fix for the navbar on tablet landscape

--- a/public/stylesheets/partials/_navbar-animated.scss
+++ b/public/stylesheets/partials/_navbar-animated.scss
@@ -10,6 +10,10 @@ nav a {
 
     @include transition(all 0.3s);
 
+    & .container-fluid{
+        background-color: $color-white;
+    }
+
     &-logo {
         @include transition(all 0.3s);
         height: $navbar-height;
