--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -262,6 +262,9 @@ nav a {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
+.navbar-animated .container-fluid {
+  background-color: #fff;
+}
 .navbar-animated-logo {
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
